src/styles.css
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200;9..40,400;9..40,500;9..40,700&display=swap');

html,body{
  font-family: 'DM Sans', sans-serif !important;
  letter-spacing: 0.3px;
  height: 100vh;
  /* cursor: none; */
}

.large-title{
  font-size: 4.5rem;
  font-weight: 500;
}

.section-padding{
  padding-inline: 9rem;
  padding-top: 6rem;
  padding-bottom: 6rem;
}

/* --------------Hero section -------------- */
.hero-section{
  height: 100vh;
  flex-direction: column;
  padding: calc(80px + 10rem);
  position: relative;
  z-index: 2;
  top: -10%;
}

.hero-subtitle{
  font-size: 1.6rem;
}

.hero-title{
  font-size: 4rem;
}

.outer-headings {
  display: flex;
  justify-content: center;
  align-items: center;
}
  
.inner-headings {
  height: 5rem;
  line-height: 5rem;
  font-size: 4rem;
  overflow: hidden;
}
  
.inner-headings span {
  position: relative;
  color:#1b1d81;
  animation: animation 14s ease infinite;
  display: inline-block;
  padding-left: 15px;
}

.hero-section .logo-icon{
  width: 5rem;
}

/* ----- Projects Section ----- */

.projects-section{
  position: relative;
  z-index: 2;
  height: auto;
  background-color: #f8f8f8;
}

.projects-section>*{
  padding-left: 0 !important; 
  padding-right: 0 !important;
}

.row{
  --bs-gutter-x: 0rem !important;
}

.row .asterisk{
  width: auto;
  height: 7rem;
}

.more-box{
  width: 7.5rem;
  height: 9rem;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  display: flex;
  text-decoration: none;
  color: transparent;
  font-weight: 700;
  font-size: 1.3rem;
  transition: ease-in-out 0.3s;
}

.more-box:hover {
  color: #000000;
}

.more-box img{
  width: 6.7rem;
  height: auto;
}

.projects-section .img-box{
  position: relative; 
  border-radius: 30px;
  border: 1px solid #000000;
  width: 28.125rem;
  height: 17.5rem;
  object-fit: cover;
  flex-shrink: 0;
  overflow: hidden;
}

.projects-section .img-inside{
  width: 100%; 
  height: 100%;
  object-fit: cover;
  flex-shrink: 0;
}

.projects-section .text-overlay{
  position: absolute; 
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0;
  background-color: rgba(0, 0, 0, 0.841);
  color: white;
  transition: opacity 0.4s ease;
  font-size: 1.8rem;
  font-weight: 700;
  text-align: center;
  padding: 1.3rem;
}

.projects-section .img-box:hover .text-overlay {
  opacity: 1;
}

/* -------- About me ------- */
.about-section{
  position: relative;
  z-index: 2;
  height: auto;
  background-color: #D5E0F3;
}

.about-section .content{
  font-size: 1.5rem;
  padding-inline: 5.5rem;
}

.blue-cube{
  width: 11.5rem !important;
  height: auto;
}

.content a{
  text-decoration: underline;
  color:#1d1d1d;
  font-weight: 700;
  transition: 0.4s ease;
}

.content a:hover{
  color:#1d4ba7;
}

.sideline{
  width: 0.25rem !important;
  height: auto;
}


/* ------- Skills ------- */
.skills-section{
  position: relative;
  z-index: 2;
  height: auto;
  background-color: #f8f8f8;
  font-size: 1.2rem;
}

.skills-section img{
  max-width: 30rem;
  height: auto;
  padding: 10px 30px;
}

.skills-section .row{
  padding-inline: 8rem;
}

.skills-button{
  display: inline-flex; /* Add this to make it adjust to content */
  align-items: center; /* Align content vertically */
  border-radius: 3.125rem;
  border: 3px solid #1d1d1d;
  padding: 10px 20px;
  font-weight: 700;
  margin-bottom: 20px;
  font-size: 1.2rem;
}

.skills-button .star-icon{
  width: 1.5rem;
  height: auto;
  padding: 0px;
}

/* ------- Contact ------ */
.contact-section{
  height: 90vh;
  position: relative;
  z-index: 2;
  margin: 3rem;
  margin-bottom: 1rem;
}

.contact-section .contact-desc{
  font-size: 1.5rem;
  margin: auto;
  width: 35rem;
}

.contact-section a{
  text-decoration: none;
  color: white;
  border-radius: 2rem;
  font-size: 1.2rem;
  padding: 1rem 2.5rem;
  transition: 0.4s ease;
  border: 1px solid #1d1d1d27;
}

.contact-section .contact:hover{
  color: white;
  background-color: #1c7713;
}

.contact-section .contact{
  background-color: #2CA122;
}

.contact-section .social a {
  background-color: #f8f8f8;
  padding: 0.8rem;
  border-radius: 2rem;
}

.contact-section .social img{
  width: 2.5rem;
  height: auto;
}

/* ------ footer ------- */

.footer-section{
  background-color: #f8f8f8;
  position: relative;
  z-index: 2;
  height: auto;
  color: #1d1d1d;
}

.footer-section .logo-icon{
  width: 1.7rem;
}

/* ---------------------------------- Media sizes ---------------------------------  */
/* xl + 100px */
@media only screen and (max-width: 1300px) {
  .skills-section .row{
    padding-inline: 1rem;
  }
}

/* lg */
@media only screen and (max-width: 992px) {
  .section-padding {
    padding-inline: 4rem;
  }

  .projects-section .img-box{
    width: 20rem;
    height: auto;
  }

  .about-section .content{
    padding-inline: 1rem;
  }

  .skills-section img{
    max-width: 27rem;
    height: auto;
    padding: 10px 30px;
  }

  .contact-section .contact-desc{
    width: 100%;
  }

}

/* sm */
@media only screen and (max-width: 576px) {
  .section-padding {
    padding-inline: 1.5rem;
    padding-top: 3rem;
    padding-bottom: 3rem;
  }

  .large-title{
    font-size: 2.5rem;
  }
  /* Hero ------------- */

  .hero-subtitle{
    font-size: 1.3rem;
  }
  
  .hero-title{
    font-size: 2.8rem;
  }

  .inner-headings {
    height: 4rem;
    line-height: 4rem;
    font-size: 3rem;
  }

  /* Projects ------------- */

  .projects-section .img-box{
    width: 18rem;
    height: auto;
  }

  .projects-section .text-overlay{
    font-size: 1rem;
  }

  .projects-section .more-box{
    font-size: 1rem;
  }

  .more-box img{
    width: 4rem;
    height: auto;
  }
  

  /* About --------- */
  .blue-cube{
    width: 8rem  !important;
    height: auto;
  }

  .about-section .content{
    font-size: 1.2rem;
  }

  /* Skills -------- */

  .skills-section .row{
    padding-inline: 0rem;
  }

  .skills-section img{
    max-width: 20rem;
    height: auto;
    padding: 10px 30px;
  }

  .skills-button{
    font-size: 1rem;
  }

  /* Contact ---- */
  .contact-section .contact-desc{
    font-size: 1.2rem;
  }

  .contact-section .contact{
    font-size: 1.2rem;
    padding: 0.7rem 2.3rem;
  }

  .contact-section .social a {
    padding: 0.8rem;
  }
  .contact-section .social img{
    width: 2.5rem;
    height: auto;
  }


}

/* ---- Cursor ---- */

::selection {
	color: white;
	background-color:#161773;
}
/* 
a:hover , button:hover {
  cursor: none;
}

#circular-cursor {
  border: 2px solid #1d1d1d;    
  height: 20px;
  width: 20px;
  border-radius: 50%;
  -moz-border-radius: 50%;
  -webkit-border-radius: 50%;
  position: fixed;
  z-index: 3;
} */

/* -------------------------- Animations ------------------------------------ */

@keyframes animation {
  /* for 3 description only
  0%, 20% {
    transform: translateY(0%);
  }
  33%, 53% {
    transform: translateY(-100%);
  }
  66%, 86% {
    transform: translateY(-200%);
  }
  100% {
    transform: translateY(-300%);
  }  */
   

  0%, 20% {
    transform: translateY(0%);
  }
  25%, 45% {
    transform: translateY(-100%);
  }
  50%, 70% {
    transform: translateY(-200%);
  }
  75%, 95% {
    transform: translateY(-300%);
  } 
  100% {
    transform: translateY(-400%);
  }
}

.grain-layer{
  position: fixed;
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  background: url('noise.png') repeat;
  opacity: 0.2; 
  z-index: 0;
}

@keyframes move {
  100% {
    transform: translate3d(0, 0, 1px) rotate(360deg);
  }
}

.circle-bg {
  position: fixed;
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  background: #f8f8f8;
  overflow: hidden;
  z-index: -1;
}

.circle-bg span {
  width: 85vmin;
  height: 85vmin;
  border-radius: 90vmin;
  backface-visibility: hidden;
  position: absolute;
  animation: move;
  animation-duration: 30;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

.circle-bg span:nth-child(0) {
  color: #5065c9;
  top:  70%;
  left: 25%;
  animation-duration: 228s;
  animation-delay: -3s;
  transform-origin: 15vw 6vh;
  box-shadow: -100vmin 0 12.971013803854495vmin currentColor;
}
.circle-bg span:nth-child(1) {
  color: #57a3ca;
  top:  70%;
  left: 25%;
  animation-duration: 203s;
  animation-delay: -38s;
  transform-origin: 11vw 2vh;
  box-shadow: -100vmin 0 12.782642895709518vmin currentColor;
}
.circle-bg span:nth-child(2) {
  color: #5065c9;
  top:  70%;
  left: 25%;
  animation-duration: 48s;
  animation-delay: -245s;
  transform-origin: -5vw -7vh;
  box-shadow: -100vmin 0 12.877265258075484vmin currentColor;
}
.circle-bg span:nth-child(3) {
  color: #5065c9;
  top:  70%;
  left: 25%;
  animation-duration: 304s;
  animation-delay: -112s;
  transform-origin: 12vw 4vh;
  box-shadow: -100vmin 0 13.298817860565379vmin currentColor;
}
.circle-bg span:nth-child(4) {
  color: #57a3ca;
  top:  70%;
  left: 25%;
  animation-duration: 262s;
  animation-delay: -164s;
  transform-origin: -23vw -5vh;
  box-shadow: 100vmin 0 12.76510459119098vmin currentColor;
}
.circle-bg span:nth-child(5) {
  color: #57a3ca;
  top:  70%;
  left: 25%;
  animation-duration: 361s;
  animation-delay: -197s;
  transform-origin: 7vw -2vh;
  box-shadow: 100vmin 0 12.996665439441038vmin currentColor;
}
.circle-bg span:nth-child(6) {
  color: #5065c9;
  top:  70%;
  left: 25%;
  animation-duration: 205s;
  animation-delay: -80s;
  transform-origin: 22vw -3vh;
  box-shadow: -100vmin 0 12.614925445422665vmin currentColor;
}
.circle-bg span:nth-child(7) {
  color: #5065c9;
  top:  70%;
  left: 25%;
  animation-duration: 53s;
  animation-delay: -147s;
  transform-origin: -7vw -22vh;
  box-shadow: -100vmin 0 13.251569102222462vmin currentColor;
}
.circle-bg span:nth-child(8) {
  color: #5065c9;
  top:  70%;
  left: 25%;
  animation-duration: 69s;
  animation-delay: -207s;
  transform-origin: 2vw -4vh;
  box-shadow: -100vmin 0 12.841217961441487vmin currentColor;
}
.circle-bg span:nth-child(9) {
  color: #57a3ca;
  top: 70%;
  left: 25%;
  animation-duration: 102s;
  animation-delay: -102s;
  transform-origin: 22vw 6vh;
  box-shadow: 100vmin 0 12.635704197657608vmin currentColor;
}
.circle-bg span:nth-child(10) {
  color: #5065c9;
  top:  70%;
  left: 25%;
  animation-duration: 365s;
  animation-delay: -117s;
  transform-origin: 16vw 20vh;
  box-shadow: -100vmin 0 12.88790920810099vmin currentColor;
}
.circle-bg span:nth-child(11) {
  color: #57a3ca;
  top:  70%;
  left: 25%;
  animation-duration: 163s;
  animation-delay: -165s;
  transform-origin: -2vw -11vh;
  box-shadow: -100vmin 0 12.897636571441977vmin currentColor;
}
.circle-bg span:nth-child(12) {
  color: #57a3ca;
  top:  70%;
  left: 25%;
  animation-duration: 65s;
  animation-delay: -236s;
  transform-origin: -6vw 4vh;
  box-shadow: 100vmin 0 12.92396374076931vmin currentColor;
}

